# KGsAuto

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  EVALUATION_APPROACH.md  README.md  RUN_GUIDE.md  SETUP.md  config.py  docker-compose.yaml  gioi_thieu_uet.md  pyproject.toml  requirements.txt  run.sh  test.py  test_graph_apis.sh
apps/backend/: .env.example  requirements.txt
apps/chat_api/: README.md  __init__.py  main.py  schemas.py  service.py
apps/frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  (+1 more)
backend/: Dockerfile
crawler/: main.py  test_conversion.py
docker/: Dockerfile.backend
docs/: rag_hybrid_graphsearch_notes.md
entity_linking/: README.md  __main__.py  bugs.md  cli.py  entity_store.py  linker.py  pipeline.py  problem.md  prompt.py
entity_linkingv2/: entity_store.py  linker.py  prompt.py  run.py  save_logs.py  test_llm.py
entity_linkingv3/: __init__.py  service.py
extract/: extractor.py  problem.md  prompt.py  prompts.py  strict_prompt.py
extractv2/: extractv2.py
frontend/: index.html  package-lock.json  package.json
llms/: __init__.py  factory.py  types.py
neo4j/: command.md
scripts/: clean_markdown_metadata.py  generate_qa_viewer.py  run.sh  strip_ai_attribution_commit_msg.sh  visualize_graph_with_html.py
services/: README.md  config.py
thesis/: AGENTS.md  THESIS_EVALUATION.md  THESIS_RULES.md  build.sh  clean.sh  install_dependencies.sh  main.listing  main.tex  package-lock.json  package.json  quy dinh thuc hien kltn (gửi sv).doc.md  sample.bib
(+6018 files in other folders)
