[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kgsauto"
version = "0.1.0"
description = "Knowledge Graph Automation System"
readme = "README.md"
requires-python = ">=3.10"

# Runtime and development dependencies are intentionally kept in requirements.txt.
# Install with: pip install -r requirements.txt && pip install -e . --no-deps

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "legacy*", "apps*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
